Add form inputs

--- a/WebDPRCalc/Views/Calculator/EditAttack.cshtml
+++ b/WebDPRCalc/Views/Calculator/EditAttack.cshtml
@@ -18,7 +18,7 @@
         <div class="inpStorage">
 
             <label class="inpLabel">Attack Modifier:</label>
-            <input type="text" name="atkmod" class="inp" />
+            <input type="number" name="atkmod" class="inp" />
             <span></span>
 
             <label class="inpLabel">Critical Range:</label>
@@ -59,7 +59,7 @@
         <div class="inpStorage">
 
             <label class="inpLabel">Damage Modifier</label>
-            <input type="text" name="dmgmod" class="inp" />
+            <input type="number" name="dmgmod" class="inp" />
             <span></span>
 
             <label class="inpLabel">Resisted?</label>
@@ -70,6 +70,18 @@
         <div class="inpStorage">
             <label class="inpLabel">Damage Dice</label>
             <input type="text" name="dmgdice" class="inp" />
+            <span></span>
+        </div>
+
+        <div class="inpStorage">
+            <label class="inpLabel">Reroll dice </label>
+            <input type="number" name="rerolldice" class="inp" />
+            <span></span>
+        </div>
+
+        <div class="inpStorage">
+            <label class="inpLabel">Additional Crit Dice</label>
+            <input type="text" name="addcritdice" class="inp" />
             <span></span>
         </div>
 
