Update attack properties and form backend

--- a/WebDPRCalc/Views/Calculator/EditAttack.cshtml
+++ b/WebDPRCalc/Views/Calculator/EditAttack.cshtml
@@ -7,13 +7,15 @@
 <a asp-controller="Calculator" asp-action="Tutorial">Calculator Tutorial</a>
 
 <form method="post" class="act-form">
-    <div class="tohit">
-        <div class="inpStorage">
+    <div class="inpStorage">
 
-            <label class="inpLabel">Attack Name:</label>
-            <input type="text" name="atkname" class="inp" />
-            <span></span>
-        </div>
+        <label class="inpLabel">Attack Name:</label>
+        <input type="text" name="atkname" class="inp" />
+        <span></span>
+
+        <input type="hidden" name="id" value="0" />
+    </div>
+    <div class="tohit">
 
         <div class="inpStorage">
 
