--- a/WebDPRCalc/Views/Shared/_Layout.cshtml
+++ b/WebDPRCalc/Views/Shared/_Layout.cshtml
@@ -4,45 +4,52 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - WebDPRCalc</title>
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">WebDPRCalc</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
-                    </ul>
-                </div>
+        <nav class="menu-bar">
+            <div class="menu-item">
+                <a class="menu-link" asp-controller="Home" asp-action="Index">Home</a>
+            </div>
+
+            <div class="menu-item">
+                <a class="menu-link" asp-controller="User" asp-action="CreateAccount">Create Account</a>
+            </div>
+
+            <div class="menu-item">
+                <a class="menu-link" asp-controller="User" asp-action="Login">Login</a>
+            </div>
+
+            <div class="menu-item">
+                <a class="menu-link" asp-controller="User" asp-action="Profile">Profile</a>
+            </div>
+
+            <div class="menu-item">
+                <a class="menu-link" asp-controller="Calculator" asp-action="EditAttack">DPR Calculator</a>
+            </div>
+
+            <div class="menu-item">
+                <a class="menu-link" asp-controller="Calculator" asp-action="AttackList">Attack List</a>
+            </div>
+
+            <div class="menu-item">
+                <a class="menu-link" asp-controller="Calculator" asp-action="Tutorial">Tutorial</a>
             </div>
         </nav>
     </header>
-    <div class="container">
-        <main role="main" class="pb-3">
+
+    <div class="render-cont">
+        <main role="main" class="main">
             @RenderBody()
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2020 - WebDPRCalc - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+    <footer class="ftr">
+        <div class="cr">
+            &copy; 2020 - WebDPRCalc
         </div>
     </footer>
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
-    @RenderSection("Scripts", required: false)
 </body>
 </html>
