--- a/WebDPRCalc/Views/Home/Index.cshtml
+++ b/WebDPRCalc/Views/Home/Index.cshtml
@@ -1,20 +1,40 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Home";
 }
 
-    <div class="text-center">
-        <h1 class="display-4">DPRCFDND</h1>
-        <a asp-controller="User" asp-action="Login">Login</a>
-        <br />
-        <a asp-controller="User" asp-action="CreateAccount">Create Account</a>
-        <br />
-        <a asp-controller="Calculator" asp-action="EditAttack">DPR Calculator</a>
-        <br />
+<div class="cont">
+    <div class="title">DPRCFDND</div>
 
-        <p>Only Avalible After Logged On</p>
+    <div class="home-menu">
+        <div class="hm-item">
+            <a class="hm-link" asp-controller="Calculator" asp-action="EditAttack">DPR Calculator</a>
+            <br />
+        </div>
 
-        <a asp-controller="Calculator" asp-action="AttackList">View Attacks</a>
-        <br />
-        <a asp-controller="User" asp-action="Profile">View Profile</a>
-        <br />
+        <div class="logged-in">
+            <div class="hm-item">
+                <a class="hm-link" asp-controller="User" asp-action="Login">Login</a>
+                <br />
+            </div>
+
+            <div class="hm-item">
+                <a class="hm-link" asp-controller="User" asp-action="Create Account">Create Account</a>
+                <br />
+            </div>
+        </div>
+
+        <br/>
+
+        <div class="logged-out">
+            <div class="hm-item">
+                <a class="hm-link" asp-controller="Calculator" asp-action="AttackList">Create Account</a>
+                <br />
+            </div>
+
+            <div class="hm-item">
+                <a class="hm-link" asp-controller="User" asp-action="Profile">View Profile</a>
+                <br />
+            </div>
+        </div>
     </div>
+</div>
