Update CalcController with form inputs

--- a/WebDPRCalc/Views/Calculator/EditAttack.cshtml
+++ b/WebDPRCalc/Views/Calculator/EditAttack.cshtml
@@ -24,7 +24,7 @@
             <span></span>
 
             <label class="inpLabel">Critical Range:</label>
-            <input type="text" name="critrange" class="inp" />
+            <input type="number" name="critrange" class="inp" />
             <span></span>
         </div>
 
