--- a/WebDPRCalc/Views/Calculator/Tutorial.cshtml
+++ b/WebDPRCalc/Views/Calculator/Tutorial.cshtml
@@ -3,6 +3,10 @@
     ViewData["Title"] = "Tutorial";
 }
 
-<h1>Tutorial</h1>
+<div class="cont">
+    <div class="title">Tutorial</div>
 
-<a asp-controller="Calculator" asp-action="EditAttack">Return To Calculator</a>
+    <div class="asp-btn">
+        <a asp-controller="Calculator" asp-action="EditAttack">Return To Calculator</a>
+    </div>
+</div>
