--- a/WebDPRCalc/Views/Calculator/AttackList.cshtml
+++ b/WebDPRCalc/Views/Calculator/AttackList.cshtml
@@ -1,7 +1,12 @@
 ﻿
-@{
-    ViewData["Title"] = "Attack List";
-}
+@{ ViewData["Title"] = "Attack List"; }
 
 <h1>AttackList</h1>
 
+@{ foreach (var attack in ViewBag.attacks)
+    {
+<div>
+    <h2>@attack.name</h2>
+    <div>edit button here</div>
+    <div>view details button here</div>
+</div> } }
