--- a/WebDPRCalc/Views/Calculator/AttackList.cshtml
+++ b/WebDPRCalc/Views/Calculator/AttackList.cshtml
@@ -7,6 +7,6 @@
     {
 <div>
     <h2>@attack.name</h2>
-    <div>edit button here</div>
-    <div>view details button here</div>
+    <a class="hm-link" asp-controller="Calculator" asp-action="ViewAttack">View</a>
+    <a class="hm-link" asp-controller="Calculator" asp-action="EditAttack">Edit</a>
 </div> } }
