--- a/WebDPRCalc/Views/User/Profile.cshtml
+++ b/WebDPRCalc/Views/User/Profile.cshtml
@@ -1,7 +1,5 @@
 ﻿
-@{
-    ViewData["Title"] = "Profile";
-}
+@{ ViewData["Title"] = "Profile"; }
 
 <h1>Profile</h1>
-
+<h3>@ViewBag.profile.username</h3>
