--- a/WebDPRCalc/Views/Calculator/EditAttack.cshtml
+++ b/WebDPRCalc/Views/Calculator/EditAttack.cshtml
@@ -1,7 +1,5 @@
 ﻿
-@{
-    ViewData["Title"] = "Edit Attack";
-}
+@{ ViewData["Title"] = "Edit Attack"; }
 
 <div class="cont">
     <div class="title">DPRCFDND</div>
@@ -15,7 +13,7 @@
             <label class="inp-label-name">Attack Name:</label>
             <input id="atk-name" type="text" name="atkname" class="inp-lg" />
             <span></span>
-          
+
             <input type="hidden" name="id" value="0" />
         </div>
 
@@ -96,7 +94,7 @@
                     </div>
 
                     <div class="inp-cont">
-                        <div class="inp-label-sized">                        
+                        <div class="inp-label-sized">
                             <label class="inp-label">Additional Crit Dice/Die: </label>
                         </div>
                         <input id="add-crit-dice" type="text" name="addcritdice" class="inp-lg" />
