Add Horizantal Divider to Menu

--- a/WebDPRCalc/Views/Shared/_Layout.cshtml
+++ b/WebDPRCalc/Views/Shared/_Layout.cshtml
@@ -44,6 +44,10 @@
                 |
             </div>
 
+            <div class="hd">
+                -----------------------------------------------
+            </div>
+
             <div class="menu-item">
                 <a class="menu-link" asp-controller="Calculator" asp-action="Tutorial">Tutorial</a>
             </div>
