--- a/WebDPRCalc/wwwroot/css/site.css
+++ b/WebDPRCalc/wwwroot/css/site.css
@@ -121,6 +121,10 @@ body {
     bottom: 0;
 }
 
+.hd {
+    display: none;
+}
+
 .home-menu {
     padding: 25px;
     margin: 15px;
@@ -308,8 +312,8 @@ body {
 #calc-cont {
     display: flex;
     flex-direction: row;
-    align-items: center;
     justify-content: space-evenly;
+    align-items: center;
 }
 
 #cdb-cont {
@@ -337,4 +341,120 @@ body {
 
 #to-hit {
     margin: 66px 45px 40px 45px;
+}
+
+@media all and (max-width: 1100px) {
+    #calc-cont {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+}
+
+@media all and (max-width: 600px) {
+    #calc-cont {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    #to-hit {
+        margin: 25px;
+    }
+
+    #to-damage {
+        margin: 25px;
+    }
+
+    .title {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .subtitle {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .calc-part {
+        padding: 12px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .inp-cont {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin: 10px;
+        padding: 5px;
+        background-color: #1e1e28;
+    }
+
+    .inp-cont-nbg {
+        margin: 10px;
+        padding: 5px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    #cdb-cont {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .button {
+        background-color: #3A255C;
+        color: #e6e9f8;
+        font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+        font-size: 1em;
+        padding: 10px;
+        margin: 15px 15px 45px 15px;
+        width: auto;
+        height: auto;
+    }
+
+    .button:hover {
+        background-color: #1E0743;
+        color: #FF91CF;
+        transition: background-color ease-out 0.4s;
+        transition: color ease-out 0.4s;
+    }
+
+    .menu-bar {
+        position: absolute;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .menu-item {
+        width: 250px;
+    }
+
+    .vd {
+        display: none;
+    }
+
+    .hd {
+        width: auto;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin: 15px;
+    }
+
+    .main{
+        margin: 350px 15px 15px 15px;
+    }
 }
