ViewAttack stored in session

--- a/WebDPRCalc/Views/Calculator/ViewAttack.cshtml
+++ b/WebDPRCalc/Views/Calculator/ViewAttack.cshtml
@@ -1,7 +1,6 @@
 ﻿@model AttackDPRCaclulation
-@{
-    ViewData["Title"] = "Attack";
-}
+@{ ViewData["Title"] = "Attack"; }
 
 <h1>View Attack</h1>
 
+@ViewBag.attack.name
