--- a/WebDPRCalc/Views/Calculator/ViewAttack.cshtml
+++ b/WebDPRCalc/Views/Calculator/ViewAttack.cshtml
@@ -3,4 +3,5 @@
 
 <h1>View Attack</h1>
 
-@ViewBag.attack.name
+<div>@ViewBag.attack.name</div>
+<div>@ViewBag.calculation.averageDamagePerHit</div>
