Menu Adjustments for Logout

--- a/WebDPRCalc/Views/Shared/_Layout.cshtml
+++ b/WebDPRCalc/Views/Shared/_Layout.cshtml
@@ -11,6 +11,7 @@
 <body>
     <header>
         <nav class="menu-bar">
+
             <div class="menu-item">
                 <a class="menu-link" asp-controller="Home" asp-action="Index">Home</a>
             </div>
@@ -19,9 +20,6 @@
                 <a class="menu-link" asp-controller="Calculator" asp-action="EditAttack">DPR Calculator</a>
             </div>
 
-            <div class="menu-item">
-                <a class="menu-link" asp-controller="Calculator" asp-action="Tutorial">Tutorial</a>
-            </div>
             @if (Context.Session.GetString("username") != null)
             {
                 <div class="menu-item">
@@ -32,9 +30,6 @@
                     <a class="menu-link" asp-controller="Calculator" asp-action="AttackList">Attack List</a>
                 </div>
 
-                <div class="menu-item">
-                    <a class="menu-link" asp-controller="User" asp-action="Logout">Logout</a>
-                </div>
             }
             else
             {
@@ -47,7 +42,7 @@
                     <a class="menu-link" asp-controller="User" asp-action="Login">Login</a>
                 </div>
             }
-            
+
             <div class="vd">
                 |
             </div>
@@ -59,6 +54,22 @@
             <div class="menu-item">
                 <a class="menu-link" asp-controller="Calculator" asp-action="Tutorial">Tutorial</a>
             </div>
+
+            @if (Context.Session.GetString("username") != null)
+            {
+                <div class="vd">
+                    |
+                </div>
+
+                <div class="hd">
+                    -----------------------------------------------
+                </div>
+
+                <div class="menu-item">
+                    <a class="menu-link" asp-controller="User" asp-action="Logout">Logout</a>
+                </div>
+            }
+
         </nav>
     </header>
 
