--- a/WebDPRCalc/Views/Calculator/AttackList.cshtml
+++ b/WebDPRCalc/Views/Calculator/AttackList.cshtml
@@ -3,11 +3,13 @@
 
 <h1>AttackList</h1>
 
-@{ foreach (var attack in ViewBag.attacks)
+@{ if (!(ViewBag.attacks is null))
     {
+@foreach (var attack in ViewBag.attacks)
+{
 <div>
     <h2>@attack.name</h2>
     @*<a class="hm-link" asp-controller="Calculator" asp-action="ViewAttack">View</a>*@
     @Html.ActionLink("Calculator", "ViewAttack", new { id = attack.id })
     @Html.ActionLink("Calculator", "EditAttack", new { id = attack.id })
-</div> } }
+</div>          } } }
