--- a/WebDPRCalc/Views/Calculator/AttackList.cshtml
+++ b/WebDPRCalc/Views/Calculator/AttackList.cshtml
@@ -10,6 +10,6 @@
 <div>
     <h2>@attack.name</h2>
     @*<a class="hm-link" asp-controller="Calculator" asp-action="ViewAttack">View</a>*@
-    @Html.ActionLink("Calculator", "ViewAttack", new { id = attack.id })
-    @Html.ActionLink("Calculator", "EditAttack", new { id = attack.id })
+    @Html.ActionLink("View", "ViewAttack", "Calculator", new { id = attack.id })
+    @Html.ActionLink("Edit", "EditAttack", "Calculator", new { id = attack.id })
 </div>          } } }
