--- a/WebDPRCalc/Views/Calculator/AttackList.cshtml
+++ b/WebDPRCalc/Views/Calculator/AttackList.cshtml
@@ -12,4 +12,5 @@
     @*<a class="hm-link" asp-controller="Calculator" asp-action="ViewAttack">View</a>*@
     @Html.ActionLink("View", "ViewAttack", "Calculator", new { id = attack.id })
     @Html.ActionLink("Edit", "EditAttack", "Calculator", new { id = attack.id })
+    @Html.ActionLink("Delete", "DeleteAttack", "Calculator", new { id = attack.id })
 </div>          } } }
