--- a/WebDPRCalc/Views/User/Profile.cshtml
+++ b/WebDPRCalc/Views/User/Profile.cshtml
@@ -2,4 +2,29 @@
 @{ ViewData["Title"] = "Profile"; }
 
 <h1>Profile</h1>
-<h3>@ViewBag.profile.username</h3>
+<h2>@ViewBag.profile.username</h2>
+<h3>Charge Your Password</h3>
+<div class="form-cont">
+    <form method="post" class="act-form">
+        <div class="inp-cont-nbg">
+            <!--//asp-for="Password"-->
+            <div class="inp-label-sized">
+                <label class="inp-label">Password:</label>
+            </div>
+            <input type="password" name="password" class="inp-lg" />
+            <!--//asp-validation-for="Password"-->
+            <span></span>
+        </div>
+
+        <div class="inp-cont-nbg">
+            <div class="inp-label-sized">
+                <label class="inp-label">Confirm Password:</label>
+            </div>
+            <input type="password" name="passwordcon" class="inp-lg" />
+            <span></span>
+        </div>
+        <div class="flex-end">
+            <input class="button2" type="submit" value="Change" />
+        </div>
+    </form>
+</div>
