--- a/WebDPRCalc/Views/User/Profile.cshtml
+++ b/WebDPRCalc/Views/User/Profile.cshtml
@@ -9,7 +9,16 @@
         <div class="inp-cont-nbg">
             <!--//asp-for="Password"-->
             <div class="inp-label-sized">
-                <label class="inp-label">Password:</label>
+                <label class="inp-label">Old Password:</label>
+            </div>
+            <input type="password" name="old" class="inp-lg" />
+            <!--//asp-validation-for="Password"-->
+            <span></span>
+        </div>
+        <div class="inp-cont-nbg">
+            <!--//asp-for="Password"-->
+            <div class="inp-label-sized">
+                <label class="inp-label">New Password:</label>
             </div>
             <input type="password" name="password" class="inp-lg" />
             <!--//asp-validation-for="Password"-->
