--- a/WebDPRCalc/Views/Calculator/Tutorial.cshtml
+++ b/WebDPRCalc/Views/Calculator/Tutorial.cshtml
@@ -48,8 +48,8 @@
             <div class="def-cont">
                 <div class="term">Elven Accuracy</div>
                 <div class="def">The accuracy of elves is legendary, especially that of elf archers and spellcasters. You have uncanny aim with attacks that rely on precision rather than brute force. You gain the following benefit:</div>
-                <div class="sub-def">- Increase your Dexterity, Intelligence, Wisdom, or Charisma score by 1, to a maximum of 20.</div>
-                <div class="sub-def">- Whenever you have advantage on an attack roll using Dexterity, Intelligence, Wisdom, or Charisma, you can reroll one of the dice once.</div>
+                <div class="sub-def">Increase your Dexterity, Intelligence, Wisdom, or Charisma score by 1, to a maximum of 20.</div>
+                <div class="sub-def">Whenever you have advantage on an attack roll using Dexterity, Intelligence, Wisdom, or Charisma, you can reroll one of the dice once.</div>
             </div>
 
             <div class="def-cont">
