--- a/WebDPRCalc/Views/Calculator/ViewAttack.cshtml
+++ b/WebDPRCalc/Views/Calculator/ViewAttack.cshtml
@@ -6,32 +6,27 @@
     <div class="title">DPRCFDND</div>
     <div class="subtitle">@ViewData["Title"]</div>
 
-    <div>Name: <span id="atkName">@ViewBag.attack.name</span></div>
+    <div class="atk-cont">
+        <div class="subtitle2">Name: &ensp;<span id="atkName">@ViewBag.attack.name</span></div>
     
-    <div>
-        Average Damage Per Hit: <span id="dmgPerHit">@ViewBag.calculation.averageDamagePerHit</span>
-    </div>
+        <div class="atk-det">Average Damage Per Hit: &ensp;<span id="dmgPerHit">@ViewBag.calculation.averageDamagePerHit</span></div>
     
-    <div>
-        Average Damage Per Crit: <span id="dmgPerCrit">@ViewBag.calculation.averageDamagePerCrit</span>
-    </div>
+        <div class="atk-det">Average Damage Per Crit: &ensp;<span id="dmgPerCrit">@ViewBag.calculation.averageDamagePerCrit</span></div>
     
-    <div>
-        Hit Chance: <span id="hitChance">@ViewBag.calculation.dPRFragments[12].hitChance</span>
-    </div>
+        <div class="atk-det">Hit Chance: &ensp;<span id="hitChance">@ViewBag.calculation.dPRFragments[12].hitChance</span></div>
     
-    <div>
-        Crit Chance: <span id="critChance">@ViewBag.calculation.dPRFragments[12].critChance</span>
-    </div>
+        <div class="atk-det">Crit Chance: &ensp;<span id="critChance">@ViewBag.calculation.dPRFragments[12].critChance</span></div>
     
-    <div>
-        Average Damage: <span id="dmg">@ViewBag.calculation.dPRFragments[12].averageDamage</span>
-    </div>
+        <div class="atk-det">Average Damage: &ensp;<span id="dmg">@ViewBag.calculation.dPRFragments[12].averageDamage</span></div>
     
-    <div class="slidecontainer">
-        <label for="acSlider" id="acLabel">17</label>
-        <input type="range" min="5" max="35" value="17" class="slider" id="acSlider">
+        <div class="atk-det">
+            <div class="slidecontainer">
+                <label for="acSlider" id="acLabel">17</label>
+                <input type="range" min="5" max="35" value="17" class="slider" id="acSlider">
+            </div>
+        </div>
     </div>
+
 
     <script type="text/javascript" src="~/js/attack.js" rel=""></script>
     <script>
